--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,9 +17,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/index">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/signIn">Sign In</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
