--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="/index">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/signIn">Sign In</a>
+                        <a class="nav-link" href="/sign_in">Sign In</a>
                     </li>
 
                 </ul>
