--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -19,7 +19,7 @@ input[type='password'] {
 }
 
 input[type='submit']:hover {
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 input {
