--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="message">
-
-  </div>
-
+<div class="container">
   <h1>Page Not Found</h1>
   <p>Sorry, but the page you were trying to view does not exist.</p>
-
-</html>
+  <img src="" alt="">
+</div>
 {% endblock %}
