--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -4,6 +4,6 @@
 <div class="container">
   <h1>Page Not Found</h1>
   <p>Sorry, but the page you were trying to view does not exist.</p>
-  <img src="" alt="">
+  <img src="{{ url_for('static', filename='img/error.svg') }}" alt="">
 </div>
 {% endblock %}
