--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,10 +19,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/index">Home</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/sign_in">Sign In</a>
+                        {% if current_user.is_anonymous %}
+                        <a class="nav-link" href="{{ url_for('signIn') }}">Sign In</a>
+                        {% else %}
+                        <a class="nav-link" href="{{ url_for('logout') }}">Sign Out</a>
+                        {% endif %}
                     </li>
 
                 </ul>
